# newBitReverse

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: Image.h  MainWindow.h  ProcessorWorker.h
src/: Image.cpp  MainWindow.cpp
